--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>: English, JavaScript, Python, C++, Java</span>
                                 </p>
                             </div>
                         </div>
