--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     A Software Developer.
                 </h1>
                 <p>
-                    I'm a Web, Android, and Desktop Developer who loves to create beautiful, responsive and functional software applications.
+                    I'm a FullStack JS Web Developer, Data Analyst, and Researcher who loves to create beautiful, responsive and functional business solutions.
                     
                 </p>
                 <div class="btn-con" onclick="window.open('img/cv.pdf')">
