--- a/index.html
+++ b/index.html
@@ -444,10 +444,6 @@
                 <div class="contact-content-con">
                     <div class="left-contact">
                         <h4>Contact me here</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
-                        </p>
                         <div class="contact-info">
                             <div class="contact-item">
                                 <div class="icon">
@@ -464,7 +460,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: nigellowa87@gmail.com</span>
+                                    <span>: nigelokoth93@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -482,7 +478,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 0702879737</span>
+                                    <span>: +254702879737</span>
                                 </p>
                             </div>
                             <div class="contact-item">
