--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
+                            <a href="https://eye-movement.netlify.app/" class="icon">
+                                <i class="fas fa-globe"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
