--- a/index.html
+++ b/index.html
@@ -222,20 +222,15 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="img/eye-movement.jpeg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="https://eye-movement.netlify.app/" class="icon">
+                            <a href="#https://eye-movement.netlify.app/" class="icon">
                                 <i class="fas fa-globe"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
+                            
                         </div>
                     </div>
                 </div>
