--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#https://eye-movement.netlify.app/" class="icon">
+                            <a href="https://eye-movement.netlify.app/" class="icon" target="_blank" rel="noopener">
                                 <i class="fas fa-globe"></i>
                             </a>
                             
@@ -236,19 +236,13 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/dashboard.jpeg" alt=""/>
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
+                            <a href="https://loving-keller-acdc94.netlify.app" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
                             </a>
                         </div>
                     </div>
