--- a/index.html
+++ b/index.html
@@ -275,57 +275,39 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port5.jpg" alt="">
+                        <img src="img/movie.jpeg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
+                            <a href="https://festive-swanson-f9b7cc.netlify.app/" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
+                            </a/>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/blogger.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://qanon-blogging.netlify.app/" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/dictionary.jpeg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port7.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
+                            <a href="https://onlinedictionaryapplication.netlify.app/" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
                             </a>
                         </div>
                     </div>
