--- a/index.html
+++ b/index.html
@@ -312,6 +312,32 @@
                         </div>
                     </div>
                 </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/todoapp.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://netlifytodolistonline.netlify.app/" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/portfolio.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://my-online-portfolio-app.netlify.app/" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="section sec4 " id="blogs">
