--- a/index.html
+++ b/index.html
@@ -496,11 +496,13 @@
                     <div class="right-contact">
                         <form action="https://formsubmit.co/anvilicious1@gmail.com" method="POST" class="contact-form">
                             <div class="input-control i-c-2">
-                                <input type="text" required placeholder="YOUR NAME">
-                                <input type="email" required placeholder="YOUR EMAIL">
+                                <input type="hidden" name="_subject" value="New submission!">
+                                <input type="text" required placeholder="YOUR NAME" required>
+                                <input type="hidden" name="_next" value="https://nigel-lowa-porfolio.netlify.app/thankyou.html">
+                                <input type="email" required placeholder="YOUR EMAIL" required>
                             </div>
                             <div class="input-control">
-                                <input type="text" required placeholder="ENTER SUBJECT">
+                                <input type="text" required placeholder="ENTER SUBJECT" required>
                             </div>
                             <div class="input-control">
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
