--- a/thankyou.html
+++ b/thankyou.html
@@ -6,7 +6,7 @@
   <title>Thank You</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       background-color: #f7f9fc;
       display: flex;
       align-items: center;
@@ -23,7 +23,7 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
     h1 {
-      color: #4CAF50;
+      color: #27AE60;
       margin-bottom: 20px;
     }
     p {
@@ -34,14 +34,14 @@
       display: inline-block;
       margin-top: 25px;
       padding: 10px 20px;
-      background-color: #4CAF50;
+      background-color: #27AE60;
       color: white;
       text-decoration: none;
       border-radius: 5px;
       transition: background-color 0.3s ease;
     }
     a:hover {
-      background-color: #45a049;
+      background-color: #219150;
     }
   </style>
 </head>
