--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                             <div class="input-control">
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
-                            <div class="submit-btn">
+                            <div class="submit-button">
                                 <button type="submit" class="submit">Submit</button>
                             </div>
                         </form>
