Updated submit button styling

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: English, JavaScript, Python, C++, Java</span>
+                                    <span>: English, JavaScript, Python, C++</span>
                                 </p>
                             </div>
                         </div>
@@ -507,8 +507,13 @@
                             <div class="input-control">
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
-                            <div class="submit-button">
-                                <button type="submit" class="submit">Submit</button>
+                            <div>
+                                <button type="submit" class="submit-button" 
+  style="background-color: #27AE60 !important; color: white; font-family: 'Poppins', Ariel; padding: 12px 24px; border: none; border-radius: 6px; font-size: 16px; cursor: pointer; transition: background-color 0.3s ease, transform 0.2s ease;"
+  onmouseover="this.style.backgroundColor='#219150'; this.style.transform='scale(1.03)';" 
+  onmouseout="this.style.backgroundColor='#27AE60'; this.style.transform='scale(1)';">
+  Submit
+</button>
                             </div>
                         </form>
                     </div>
