--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nigel's Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="img/fav.jpeg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -478,17 +479,17 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
+                                <a href="https://dev.to/dashboard" target="_blank">
+                                    <i class="fab fa-dev"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://x.com/botyliciouss" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/BDFL669" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-youtube"></i>
+                                <a href="https://www.reddit.com/user/Soren_Professor/" target="_blank">
+                                    <i class="fab fa-reddit"></i>
                                 </a>
                             </div>
                         </div>
