updated the about me page

--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                        delectus dolore fugiat exercitationem a, 
-                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Harum non necessitatibus deleniti eum soluta.
+                        Hi, I’m Nigel Okoth, a passionate fullstack 
+                        software engineer specializing in web, Windows, 
+                        and AI-driven solutions. I thrive in dynamic 
+                        environments where innovation meets real-world impact. 
+                        <br /> <br /> With a strong foundation in statistics and programming, 
+                        I bring data-driven insight to every project. 
+                        I’m eager to contribute to transformative ideas 
+                        while growing professionally and helping organizations 
+                        achieve their goals through technology. 
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -66,25 +68,25 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">650+</p>
+                            <p class="large-text">15+</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
+                            <p class="large-text">4+</p>
                             <p class="small-text">Years of <br /> experience</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">300+</p>
+                            <p class="large-text">20+</p>
                             <p class="small-text">Happy <br /> Clients</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">400+</p>
+                            <p class="large-text">20+</p>
                             <p class="small-text">Customer <br /> reviews</p>
                         </div>
                     </div>
