add new portfolio items

--- a/index.html
+++ b/index.html
@@ -252,6 +252,45 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
+                        <img src="img/sunset.jpeg" alt=""/>
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://codepen.io/bdfl669/full/ExWgPyZ" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/quotes.jpeg" alt=""/>
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://codepen.io/bdfl669/full/oNZxXmz" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/documentation.jpeg" alt=""/>
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://codepen.io/bdfl669/full/BaQGvQj" class="icon" target="_blank" rel="noopener">
+                                <i class="fas fa-globe"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
                         <img src="img/calculator.jpeg" alt="">
                     </div>
                     <div class="hover-items">
@@ -259,7 +298,7 @@
                         <div class="icons">
                             <a href="https://vigorous-galileo-d2809a.netlify.app" class="icon" target="_blank" rel="noopener">
                                 <i class="fas fa-globe"></i>
-                            </a/>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -272,7 +311,7 @@
                         <div class="icons">
                             <a href="https://boring-booth-c8c258.netlify.app/" class="icon" target="_blank" rel="noopener">
                                 <i class="fas fa-globe"></i>
-                            </a/>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -285,7 +324,7 @@
                         <div class="icons">
                             <a href="https://festive-swanson-f9b7cc.netlify.app/" class="icon" target="_blank" rel="noopener">
                                 <i class="fas fa-globe"></i>
-                            </a/>
+                            </a>
                         </div>
                     </div>
                 </div>
