fix dev.to link

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="https://dev.to/dashboard" target="_blank">
+                                <a href="https://dev.to/anvilicious" target="_blank">
                                     <i class="fab fa-dev"></i>
                                 </a>
                                 <a href="https://x.com/botyliciouss" target="_blank">
